metadata/force-app/main/default/objects/CustomName_lwlFb__c/CustomName_lwlFb__c.object-meta.xml
<CustomObject>
    <description>Description_cxDAK</description>
    <label>CustomLabel_qwVwG</label>
    <nameField>
        <label>CustomLabel_qwVwG</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_qwVwGs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>