metadata/force-app/main/default/objects/CustomName_lwlFb__c/fields/CustomField_oCXAX__c.field-meta.xml
<CustomField>
    <fullName>CustomField_oCXAX__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldfbjpP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>