metadata/force-app/main/default/objects/CustomName_lwlFb__c/fields/CustomField_yuPjb__c.field-meta.xml
<CustomField>
    <fullName>CustomField_yuPjb__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldgzLbd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>